# drasi-core

./: .codecov.yml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.cross-gnu  Dockerfile.cross-gnu-aarch64  Dockerfile.cross-musl  Dockerfile.cross-musl-aarch64  Dockerfile.cross-windows-gnu  Makefile  PR-485-review-responses.md  _typos.toml  cliff.toml  clippy-crate.sh  clippy.toml  component-graph-review-v1.md  component-graph-review.md  deny.toml  merge-analysis.md  postgres-integration-tests-plan.md  readme.md  release-plz.toml  renovate.json
components/batching-common/: Cargo.toml
components/host-sdk/: CHANGELOG.md  Cargo.toml  README.md
components/host-sdk/src/: callbacks.rs  fetcher.rs  identity_bridge.rs  lib.rs  lifecycle.rs  (+8 more)
components/kubernetes-common/: CHANGELOG.md  Cargo.toml
components/mssql-common/: CHANGELOG.md  Cargo.toml
components/plugin-runtime/: Cargo.toml  build.rs
components/plugin-sdk/: CHANGELOG.md  Cargo.toml  README.md  build.rs
components/tokio-bridge/: Cargo.toml
core/: AGENTS.md  CHANGELOG.md  Cargo.toml
core/src/: lib.rs  position.rs  sample_utils.rs
drasi-query-index-mongo/: Cargo.toml
drasi-query-index-mongo/src/: element_index.rs  lib.rs
examples/plugin-demo/: Cargo.toml
examples/query/: Cargo.toml  process_monitor.rs  readme.md  temperature.rs  vehicles.rs
functions-cypher/: CHANGELOG.md  Cargo.toml
functions-cypher/src/: lib.rs
functions-gql/: CHANGELOG.md  Cargo.toml
functions-gql/src/: lib.rs  tests.rs
index-garnet/: AGENTS.md  Cargo.toml
index-garnet/src/: element_index.rs  future_queue.rs  lib.rs  result_index.rs
index-garnet/tests/: scenario_tests.rs
index-rocksdb/: AGENTS.md  Cargo.toml
index-rocksdb/src/: element_index.rs  future_queue.rs  lib.rs  result_index.rs
index-rocksdb/tests/: scenario_tests.rs
lib/: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  STATIC_LIFETIME_ANALYSIS.md  clippy.toml  deny.toml  rustfmt.toml
lib-integration-tests/: Cargo.toml
lib-integration-tests/tests/: application_source_e2e.rs  deprovision_reconfigure.rs  log_event_streaming.rs  log_worker_channel.rs  postgres_log_capture.rs  runtime_flavor_tests.rs  source_query_reaction_e2e.rs
lib/docs/: CLAUDE_CODE_REVIEW.md
lib/examples/: component_inspection.rs  component_lifecycle.rs  profiling_basic.rs  profiling_with_profiler_reaction.rs  query_with_middleware.rs  registry_and_builder_demo.rs
lib/src/: application.rs  builder.rs  component_graph.rs  component_ops.rs  error.rs  inspection.rs  lib.rs  lib_core.rs  lifecycle.rs  lifecycle_events_tests.rs  position.rs  recovery.rs  schema.rs  server_core.rs  state_guard.rs  test_helpers.rs
lib/tests/: README.md  app_source_to_app_reaction_test.rs  app_source_to_http_reaction_test.rs  bootstrap_failure_e2e.rs  bootstrap_platform_provider.rs  config_validation.rs  dispatch_buffer_capacity_hierarchy_test.rs  http_integration_test.rs  http_integration_test_driver.sh  http_reaction_simple_test.rs  http_source_to_http_reaction_test.rs  integration.rs  metrics_e2e.rs  middleware_integration_test.rs  multi_reaction_subscription_test.rs  multi_source_join_test.rs  platform_reaction_integration.rs  platform_source_integration.rs  priority_queue_hierarchy_test.rs  profiling_integration_test.rs  reaction_recovery_e2e.rs  static_rocksdb_index_e2e.rs  storage_backend_integration_test.rs
lib/typespec/: README-TYPESPEC.md  common-types.tsp
middleware/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
middleware/src/: common.rs  lib.rs
query-ast/: AGENTS.md  CHANGELOG.md  Cargo.toml
query-ast/src/: api.rs  ast.rs  lib.rs
query-cypher/: AGENTS.md  CHANGELOG.md  Cargo.toml
query-cypher/src/: lib.rs  tests.rs
query-gql/: AGENTS.md  CHANGELOG.md  Cargo.toml
query-gql/src/: lib.rs  tests.rs
query-perf/: .gitignore  AGENTS.md  Cargo.toml  README.md  run_perf_tests  run_perf_tests.sh
query-perf/src/: main.rs  models.rs  scenario.rs  test_run.rs
server-core/: ANALYSIS_SUMMARY.md  CLAUDE.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  PERFORMANCE_DOCS_INDEX.md  PERFORMANCE_REFACTORING_GUIDE.md  README.md  build.rs  rustfmt.toml
server-core/docs/: ARCHITECTURE.md  CLAUDE_CODE_REVIEW.md  CODE_ANALYSIS_REPORT.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_CODE_REVIEW.md  DETAILED_FINDINGS.md  DEVELOPER_GUIDE.md  DOCUMENTATION_QA_REPORT.md  PERFORMANCE_ANALYSIS.md  PROFILING.md  QUICK_REFERENCE.md  REACTION_BASE_ANALYSIS.md  RELIABILITY_ANALYSIS.md  bootstrap-architecture.md  problems_to_fix.md
server-core/examples/: component_inspection.rs  component_lifecycle.rs  profiling_basic.rs  profiling_with_profiler_reaction.rs  query_with_middleware.rs
server-core/src/: error.rs  inspection.rs  lib.rs  server_core.rs
server-core/tests/: README.md  app_source_to_app_reaction_test.rs  app_source_to_http_reaction_test.rs  bootstrap_platform_provider.rs  broadcast_capacity_hierarchy_test.rs  config_validation.rs  dispatch_buffer_capacity_hierarchy_test.rs  example_compilation_test.rs  http_integration_test.rs  http_reaction_simple_test.rs  http_source_to_http_reaction_test.rs  integration.rs  middleware_integration_test.rs  multi_reaction_subscription_test.rs  multi_source_join_test.rs  platform_reaction_integration.rs  platform_reaction_integration.rs.bak  platform_source_integration.rs  priority_queue_hierarchy_test.rs  profiling_integration_test.rs  storage_backend_integration_test.rs
shared-tests/: AGENTS.md  Cargo.toml
shared-tests/src/: lib.rs  mock_source.rs  mssql_helpers.rs  mysql_helpers.rs  postgres_helpers.rs  recovery_test_helpers.rs  redis_helpers.rs  sequence_counter.rs  test_source.rs
shared-tests/tests/: storedproc_postgres_integration.rs
sync-vectorstore-core/: Cargo.toml  README.md
sync-vectorstore-core/src/: lib.rs  openai.rs
sync-vectorstore-qdrant/: Cargo.toml  README.md
sync-vectorstore-qdrant/examples/: demo_connect.rs
sync-vectorstore-qdrant/src/: lib.rs
temp/kubernetes-poc-verification/: Cargo.toml
temp/neo4j-poc-verification/: Cargo.toml
temp/ris-live-poc-verification/: Cargo.toml
(+2191 files in other folders)
