[workspace]

members = [
  "core",
  "query-ast",
  "query-cypher",
  "query-gql",
  "functions-cypher",
  "functions-gql",
  "middleware",
  "lib",

  # Shared component libraries
  "components/mssql-common",

  # Bootstrap Plugins
  "components/bootstrappers/postgres",
  "components/bootstrappers/platform",
  "components/bootstrappers/scriptfile",
  "components/bootstrappers/application",
  "components/bootstrappers/noop",
  "components/bootstrappers/mssql",

  # Source Plugins
  "components/sources/postgres",
  "components/sources/http",
  "components/sources/grpc",
  "components/sources/platform",
  "components/sources/application",
  "components/sources/mock",
  "components/sources/mssql",

  # Reaction Plugins
  "components/reactions/http",
  "components/reactions/http-adaptive",
  "components/reactions/grpc",
  "components/reactions/grpc-adaptive",
  "components/reactions/sqs",
  "components/reactions/sse",
  "components/reactions/platform",
  "components/reactions/profiler",
  "components/reactions/application",
  "components/reactions/log",
  "components/reactions/storedproc-mssql",
  "components/reactions/storedproc-mysql",
  "components/reactions/storedproc-postgres",

  # Index Plugins
  "components/indexes/rocksdb",
  "components/indexes/garnet",

  # State Store Plugins
  "components/state_stores/redb",

  # FFI Primitives (shared FFI types and macros)
  "components/ffi-primitives",

  # Plugin SDK
  "components/plugin-sdk",

  # Host SDK (host-side plugin loading and proxy types)
  "components/host-sdk",

  # Build tooling
  "xtask",

  # Internal
  "shared-tests",
  "query-perf",
  "examples/query",
  "lib-integration-tests",
  ]

# Exclude internal crates from workspace packaging
exclude = [
  "shared-tests",
  "query-perf",
  "examples/query",
  "lib-integration-tests",
  "xtask",
]

resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/drasi-project/drasi-core"
keywords = ["drasi"]
categories = ["database"]

[workspace.dependencies]
# Internal workspace crates
drasi-query-ast = { version = "0.3.2", path = "query-ast" }
drasi-query-cypher = { version = "0.3.2", path = "query-cypher" }
drasi-query-gql = { version = "0.3.2", path = "query-gql" }
drasi-core = { version = "0.4.0", path = "core" }
drasi-functions-cypher = { version = "0.4.0", path = "functions-cypher" }
drasi-functions-gql = { version = "0.4.0", path = "functions-gql" }
drasi-middleware = { version = "0.4.0", path = "middleware" }
drasi-lib = { version = "0.4.0", path = "lib" }
drasi-ffi-primitives = { version = "0.4.0", path = "components/ffi-primitives" }
drasi-plugin-sdk = { version = "0.4.0", path = "components/plugin-sdk" }
drasi-host-sdk = { version = "0.4.0", path = "components/host-sdk" }

# Common dependencies
utoipa = { version = "4", features = ["chrono"] }
drasi-index-rocksdb = { version = "0.3.0", path = "components/indexes/rocksdb" }
drasi-index-garnet = { version = "0.1.5", path = "components/indexes/garnet" }

# Component plugins
drasi-source-mssql = { version = "0.1.0", path = "components/sources/mssql" }
drasi-bootstrap-mssql = { version = "0.1.0", path = "components/bootstrappers/mssql" }
drasi-bootstrap-postgres = { version = "0.1.10", path = "components/bootstrappers/postgres" }
drasi-reaction-application = { version = "0.2.7", path = "components/reactions/application" }
drasi-source-postgres = { version = "0.1.10", path = "components/sources/postgres" }
drasi-source-application = { version = "0.1.9", path = "components/sources/application" }
drasi-bootstrap-application = { version = "0.1.8", path = "components/bootstrappers/application" }
drasi-reaction-http = { version = "0.1.9", path = "components/reactions/http" }
drasi-reaction-grpc = { version = "0.2.6", path = "components/reactions/grpc" }
drasi-reaction-sqs = { version = "0.1.0", path = "components/reactions/sqs" }
drasi-mssql-common = { version = "0.1.0", path = "components/mssql-common" }

[workspace.lints.rust]
warnings = "deny"
unused = "allow"

[workspace.lints.clippy]
print_stdout = "warn"
unwrap_used = "warn"
uninlined_format_args = "warn"
module_inception = "allow"
ptr_arg = "allow"
type_complexity = "allow"
large_enum_variant = "allow"

[profile.release]
codegen-units = 1
lto = true
