[package]
name = "drasi-core"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
parallel_solver = []

[dependencies]
async-trait = "0.1.68"
drasi-query-ast = { path = "../query-ast" }
drasi-query-cypher = { path = "../query-cypher" }
hashers = "1.0.1"
ordered-float = "3.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version =  "1.29.1", features = ["full"] }
async-recursion = "1.0.4"
futures = "0.3.28"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
itoa = "1.0.1"
caches = "0.2.4"
log = "0.4.20"
tracing = "0.1.37"
opentelemetry = "0.20"
chrono = { version = "0.4.31", features = ["serde"] }
dateparser = "0.2.0"
chrono-tz = "0.8.3"
regex = "1.9.5"
iso8601-duration = "0.2.0"
round = "0.1.2"
priority-queue = "1.3.2"
thiserror = "1.0.50"
statistical = "1.0.0"
approx = "0.5.1"
lazy_static = "1.4.0"
