[package]
name = "drasi-query-index-mongo"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drasi-query-core = { path = "../drasi-query-core" }
mongodb = "2.6.0"
async-trait = "0.1.68"
hashers = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tracing = "0.1.37"