[package]
name = "drasi-functions-cypher"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Cypher function implementations for Drasi"
repository = "https://github.com/drasi-project/drasi-core"

[lints]
workspace = true

[dependencies]
drasi-core = { version = "0.2.2", path = "../core" }
