[package]
name = "drasi-functions-gql"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "GraphQL function implementations for Drasi"
repository = "https://github.com/drasi-project/drasi-core"

[lints]
workspace = true

[dependencies]
drasi-core = { version = "0.1.0", path = "../core" }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }