[package]
name = "drasi-functions-gql"
version = "0.3.4"
edition = "2021"
license = "Apache-2.0"
description = "GraphQL function implementations for Drasi"
repository = "https://github.com/drasi-project/drasi-core"

[lints]
workspace = true

[dependencies]
drasi-core.workspace = true

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
