[package]
name = "drasi-index-garnet"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Drasi Core Garnet Index"
repository = "https://github.com/drasi-project/drasi-core"
keywords = ["drasi"]
categories = ["database"]
readme = "../readme.md"    

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drasi-query-ast = { path = "../query-ast" }
drasi-core = { path = "../core" }
redis = { version = "0.25", features = ["tokio-comp"] }
async-trait = "0.1.68"
hashers = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
fnv = "1.0.7"
bit-set = "0.5.3"
siphasher = "0.3.10"
async-stream = "0.3.5"
tokio = { version =  "1.29.1", features = ["full"] }
async-recursion = "1.0.4"
ordered-float = "3.7.0"
tracing = "0.1.37"
prost = "0.12.3"

[dev-dependencies]
shared-tests = { path = "../shared-tests" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

