[package]
name = "drasi-index-rocksdb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Drasi Core RocksDb Index"
repository = "https://github.com/drasi-project/drasi-core"
keywords = ["drasi"]
categories = ["database"]
readme = "../readme.md"    

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drasi-core = { path = "../core" }
drasi-query-ast = { path = "../query-ast" }
rocksdb = {version = "0.21.0", features = ["default", "multi-threaded-cf"]}
async-trait = "0.1.68"
hashers = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
fnv = "1.0.7"
fastmurmur3 = "0.2.0"
bit-set = "0.5.3"
async-stream = "0.3.5"
tokio = { version =  "1.29.1", features = ["rt-multi-thread", "sync", "time", "macros"] }
ordered-float = "3.7.0"
tracing = "0.1.37"
prost = "0.12.3"

[dev-dependencies]
shared-tests = { path = "../shared-tests" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
