# Copyright 2025 The Drasi Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "drasi-lib"
version = "0.3.9"
edition.workspace = true
authors = ["Drasi Project"]
description = "Drasi Lib"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = []
azure-identity = ["dep:azure_identity", "dep:azure_core", "dep:reqwest"]
aws-identity = ["dep:aws-config", "dep:aws-sdk-rds", "dep:aws-sdk-sts"]
all-identity = ["azure-identity", "aws-identity"]

# Middleware features (passed through to drasi-middleware)
middleware-jq = ["drasi-middleware/jq"]
middleware-bundled-jq = ["drasi-middleware/bundled-jq"]
middleware-decoder = ["drasi-middleware/decoder"]
middleware-map = ["drasi-middleware/map"]
middleware-parse-json = ["drasi-middleware/parse_json"]
middleware-promote = ["drasi-middleware/promote"]
middleware-relabel = ["drasi-middleware/relabel"]
middleware-unwind = ["drasi-middleware/unwind"]

# Convenience feature to enable all middleware
middleware-all = ["drasi-middleware/all"]

[package.metadata.docs.rs]
features = ["middleware-all"]

[lib]
name = "drasi_lib"
path = "src/lib.rs"

[dependencies]
drasi-core.workspace = true
drasi-functions-cypher.workspace = true
drasi-functions-gql.workspace = true
drasi-query-ast.workspace = true
drasi-query-cypher.workspace = true
drasi-query-gql.workspace = true
drasi-middleware = { workspace = true, optional = true }

# Note: Index backends (RocksDB, Garnet) are now plugins and NOT direct dependencies.
# Users who need persistent storage should:
#   1. Add drasi-index-rocksdb or drasi-index-garnet to their Cargo.toml
#   2. Create an IndexBackendPlugin instance
#   3. Pass it to DrasiLib::builder().with_index_provider(...)

tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
log = { version = "0.4", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
ordered-float = "3.7"
rand = "0.8"
futures = "0.3"

azure_identity = { version = "0.31", optional = true, default-features = false, features = ["tokio"] }
azure_core = { version = "0.31", optional = true, default-features = false, features = ["tokio", "reqwest"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls"] }

aws-config = { version = "1.5", optional = true }
aws-sdk-rds = { version = "1.77", optional = true }
aws-sdk-sts = { version = "1.50", optional = true }

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"
assert_matches = "1.5"
serial_test = "3.0"
pretty_assertions = "1.4"
test-case = "3.3"

# Additional testing dependencies
rstest = "0.18"
