[package]
name = "drasi-middleware"
version = "0.3.1"
edition.workspace = true
license.workspace = true
description = "Drasi Core Middleware"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../readme.md"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.68"
drasi-core.workspace = true
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonpath-rust = "0.5.0"
base64 = "0.22.0"
ordered-float = "3.7.0"
hex = "0.4.3"
urlencoding = "2.1.2"
jq-rs ="0.4.1"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "sync", "time", "macros"] }
