[package]
name = "drasi-middleware"
version = "0.3.3"
edition.workspace = true
license.workspace = true
description = "Drasi Core Middleware"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../readme.md"

[lints]
workspace = true

[features]
default = []

# Individual middleware features
jq = ["dep:jq-rs"]
bundled-jq = ["jq", "jq-rs/bundled"]
decoder = []
map = []
parse_json = []
promote = []
relabel = []
unwind = []

# Convenience feature to enable all middleware
all = ["jq", "decoder", "map", "parse_json", "promote", "relabel", "unwind"]

[package.metadata.docs.rs]
features = ["all"]

[dependencies]
# Core dependencies (always needed)
async-trait = "0.1.68"
drasi-core.workspace = true
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Dependencies used by specific middleware
jsonpath-rust = "0.5.0"  # Used by map/unwind
base64 = "0.22.0"        # Used by decoder
hex = "0.4.3"            # Used by decoder
urlencoding = "2.1.2"    # Used by decoder

# Optional: only compiled when jq feature is enabled (always uses bundled)
jq-rs = { version = "0.4.1", optional = true }

[dev-dependencies]
ordered-float = "3.7.0"  # Used by parse_json tests
