[package]
name = "drasi-query-ast"
version = "0.3.2"
edition.workspace = true
license.workspace = true
description = "Drasi Core Abstract Syntax Tree"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../readme.md"    

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.164"
serde_json = "1.0.96"
thiserror = "1.0.61"
