[package]
name = "drasi-query-cypher"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drasi-query-ast = { path = "../query-ast" }
peg = "0.8.1"
serde = "1.0.164"
serde_json = "1.0.96"
